This test saves a car with details and an image. It checks if the database updates once and confirms.