@@ -1,6 +1,5 @@
 package org.example.software_project.Persistence;
 
-
 import org.example.software_project.business.Vehicle;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -8,15 +7,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
+import java.sql.*;
+
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 class VehicleDaoImplTest {
 
@@ -35,15 +31,21 @@ class VehicleDaoImplTest {
     @BeforeEach
     void setUp() throws Exception {
         MockitoAnnotations.openMocks(this);
-        when(mockConnection.prepareStatement(any())).thenReturn(mockPreparedStatement);
-        when(mockPreparedStatement.executeQuery()).thenReturn(mockResultSet);
-    }
 
+        when(mockConnection.prepareStatement(any(), eq(Statement.RETURN_GENERATED_KEYS)))
+                .thenReturn(mockPreparedStatement);
+        when(mockPreparedStatement.executeUpdate()).thenReturn(1);
+        when(mockPreparedStatement.getGeneratedKeys()).thenReturn(mockResultSet);
+        when(mockResultSet.next()).thenReturn(true);
+        when(mockResultSet.getLong(1)).thenReturn(1L);
+    }
 
     @Test
     void testGetAllVehicles() throws Exception {
+        when(mockPreparedStatement.executeQuery()).thenReturn(mockResultSet);
         when(mockResultSet.next()).thenReturn(true).thenReturn(false);
-        when(mockResultSet.getInt("id")).thenReturn(1);
+        when(mockResultSet.getLong("id")).thenReturn(1L);
+        when(mockResultSet.getLong("seller_id")).thenReturn(10L);
         when(mockResultSet.getString("make")).thenReturn("Ford");
         when(mockResultSet.getString("model")).thenReturn("Fiesta");
         when(mockResultSet.getInt("year")).thenReturn(2009);
@@ -52,25 +54,55 @@ class VehicleDaoImplTest {
         when(mockResultSet.getString("fuel_type")).thenReturn("Petrol");
         when(mockResultSet.getString("transmission")).thenReturn("Manual");
         when(mockResultSet.getString("category")).thenReturn("Hatchback");
-        when(mockResultSet.getString("description")).thenReturn("car");
-        when(mockResultSet.getString("location")).thenReturn("louth");
-        when(mockResultSet.getString("status")).thenReturn("now");
+        when(mockResultSet.getString("description")).thenReturn("Car in great condition.");
+        when(mockResultSet.getString("location")).thenReturn("Louth");
+        when(mockResultSet.getString("status")).thenReturn("Available");
+        when(mockResultSet.getString("image_url")).thenReturn("/images/ford_fiesta.jpg");
 
         List<Vehicle> vehicles = vehicleDao.getAllVehicles();
 
         assertNotNull(vehicles);
         assertEquals(1, vehicles.size());
-        assertEquals(1, vehicles.getFirst().getId());
-        assertEquals("Ford", vehicles.getFirst().getMake());
-        assertEquals("Fiesta", vehicles.getFirst().getModel());
-        assertEquals(2009, vehicles.getFirst().getYear());
-        assertEquals(3500, vehicles.getFirst().getPrice());
-        assertEquals(190000, vehicles.getFirst().getMileage());
-        assertEquals("Petrol", vehicles.getFirst().getFuelType());
-        assertEquals("Manual", vehicles.getFirst().getTransmission());
-        assertEquals("Hatchback", vehicles.getFirst().getCategory());
-        assertEquals("car", vehicles.getFirst().getDescription());
-        assertEquals("louth", vehicles.getFirst().getLocation());
-        assertEquals("now", vehicles.getFirst().getStatus());
+        assertEquals(1L, vehicles.get(0).getId());
+        assertEquals("Ford", vehicles.get(0).getMake());
+        assertEquals("Fiesta", vehicles.get(0).getModel());
+        assertEquals(2009, vehicles.get(0).getYear());
+        assertEquals(3500.0, vehicles.get(0).getPrice());
+        assertEquals(190000, vehicles.get(0).getMileage());
+        assertEquals("Petrol", vehicles.get(0).getFuelType());
+        assertEquals("Manual", vehicles.get(0).getTransmission());
+        assertEquals("Hatchback", vehicles.get(0).getCategory());
+        assertEquals("Car in great condition.", vehicles.get(0).getDescription());
+        assertEquals("Louth", vehicles.get(0).getLocation());
+        assertEquals("Available", vehicles.get(0).getStatus());
+        assertEquals("/images/ford_fiesta.jpg", vehicles.get(0).getImage_url());
+    }
+
+    @Test
+    void testSaveVehicle() throws Exception {
+
+        Vehicle vehicle = new Vehicle();
+        vehicle.setSellerId(100L);
+        vehicle.setMake("Toyota");
+        vehicle.setModel("Corolla");
+        vehicle.setYear(2024);
+        vehicle.setPrice(30000);
+        vehicle.setMileage(25000);
+        vehicle.setFuelType("Petrol");
+        vehicle.setTransmission("Automatic");
+        vehicle.setCategory("Sedan");
+        vehicle.setDescription("A well-maintained car.");
+        vehicle.setLocation("Dublin");
+        vehicle.setStatus("Available");
+
+        String fileName = "tesla.png";
+
+        vehicleDao.saveVehicle(vehicle, fileName);
+
+        verify(mockPreparedStatement, times(1)).executeUpdate();
+
+        assertEquals(1L, vehicle.getId());
+        assertEquals("/images/tesla.png", vehicle.getImage_url());
     }
 }
+
